1024*768 layout issues
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/front/workspaces/kmc/trunk@57440 6b8eccd3-e8c5-4e7d-8186-e12b5326b719

--- a/KMC/assets/kmc_skin.css
+++ b/KMC/assets/kmc_skin.css
@@ -1689,8 +1689,8 @@ HBox.bulkHBox
 VBox.blueBoxContainer
 {
 background-alpha:1;
-padding-top:20px;
-padding-bottom:20px;
+padding-top:0;
+padding-bottom:0;
 border-style:solid;
 border-thickness:0;
 corner-radius:0;
